[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui_elements/assets/themes/suspect_ui.tres" type="Theme" id=1]
[ext_resource path="res://game/ui_elements/meeting_ui.gd" type="Script" id=2]
[ext_resource path="res://ui_elements/assets/themes/suspect_ui_small.tres" type="Theme" id=3]
[ext_resource path="res://ui_elements/assets/themes/suspect_font_label.tres" type="DynamicFont" id=4]

[node name="MeetingUI" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 1 )
color = Color( 0.129412, 0.113725, 0.113725, 1 )
script = ExtResource( 2 )

[node name="TimeLeft" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_right = 40.0
margin_bottom = 74.0
text = "0:00"

[node name="MainBox" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 60.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VoteSide" type="VBoxContainer" parent="MainBox"]
margin_right = 700.0
margin_bottom = 950.0
rect_min_size = Vector2( 700, 0 )

[node name="VoteTitle" type="Label" parent="MainBox/VoteSide"]
margin_right = 700.0
margin_bottom = 74.0
text = "Vote"
align = 1

[node name="VoteOptions" type="VBoxContainer" parent="MainBox/VoteSide"]
margin_top = 90.0
margin_right = 700.0
margin_bottom = 90.0

[node name="ChatBox" type="MarginContainer" parent="MainBox"]
margin_left = 712.0
margin_right = 1860.0
margin_bottom = 950.0
rect_min_size = Vector2( 500, 0 )

[node name="VBoxContainer" type="VSplitContainer" parent="MainBox/ChatBox"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1128.0
margin_bottom = 930.0

[node name="TextEdit" type="TextEdit" parent="MainBox/ChatBox/VBoxContainer"]
margin_right = 1108.0
margin_bottom = 808.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "Start chatting!"
readonly = true
wrap_enabled = true

[node name="HBoxContainer" type="HSplitContainer" parent="MainBox/ChatBox/VBoxContainer"]
margin_top = 820.0
margin_right = 1108.0
margin_bottom = 910.0
size_flags_vertical = 0

[node name="LineEdit" type="LineEdit" parent="MainBox/ChatBox/VBoxContainer/HBoxContainer"]
margin_right = 967.0
margin_bottom = 90.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MainBox/ChatBox/VBoxContainer/HBoxContainer"]
margin_left = 979.0
margin_right = 1108.0
margin_bottom = 90.0
size_flags_horizontal = 0
text = "Send"

[node name="VoteTimeOut" type="Timer" parent="."]
wait_time = 75.0
autostart = true

[connection signal="timeout" from="VoteTimeOut" to="." method="_on_VoteTimeOut_timeout"]
